--- a/Blog-Hub/src/app/home/blog-page/blog-page.component.css
+++ b/Blog-Hub/src/app/home/blog-page/blog-page.component.css
@@ -13,3 +13,9 @@ overflow: hidden;
    margin: auto;
    margin-top: 20px; 
 }
+
+.logo{
+    height:80px;
+    /* border: 2px solid black; */
+    overflow: hidden;
+   }
