--- a/Blog-Hub/src/app/home/blog-page/blog-page.component.html
+++ b/Blog-Hub/src/app/home/blog-page/blog-page.component.html
@@ -1,3 +1,7 @@
+<div class="logo">
+    <img src="./logo.jpg" alt="logo" width="200" height="100">
+  
+  </div>
 <div class="container">
     <div class="blog-img">
         <img src="./hyderabad-biryani.jpg" alt="img" >
