--- a/Blog-Hub/src/app/home/home.component.css
+++ b/Blog-Hub/src/app/home/home.component.css
@@ -157,4 +157,69 @@ width: 425px!important;
   margin: auto;
 }
 
+/* user profile */
+/* General user section */
+.user-section {
+  position: relative;
+  /* width: 200px; */
+  /* padding: 10px; */
+  /* background-color: #f4f4f4; */
+  border-radius: 8px;
+  text-align: center;
+}
+
+/* Profile Picture */
+.profile-picture {
+  cursor: pointer;
+  /* margin-bottom: 10px; */
+}
+
+.profile-picture img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 3px solid #ccc;
+}
+
+/* Sidebar */
+.sidebar {
+  position: absolute;
+  top: 100%;
+  left: -130px;
+  width: 200px;
+  background-color: #333;
+  color: white;
+  border-radius: 8px;
+  margin-top: 10px;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.sidebar ul li {
+  padding: 10px;
+  text-align: center;
+}
+
+.sidebar ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
+  display: block;
+}
+
+.sidebar ul li a:hover {
+  background-color: #555;
+}
+
+.example-button-container {
+  display: flex;
+  justify-content: center;
+  width: 140px;
+}
+
+
 
