--- a/Blog-Hub/src/app/signup/signup.component.css
+++ b/Blog-Hub/src/app/signup/signup.component.css
@@ -1,5 +1,4 @@
 
-
 .auth-container {
   display: flex;
   justify-content: center;
@@ -8,7 +7,7 @@
   /* background-color: #f5f5f5; */
 }
 
-.signup {
+mat-card {
   width: 100%;
   max-width: 400px;
   padding: 20px;
@@ -48,11 +47,4 @@
  overflow: hidden;
 }
 
-.mat-stepper-horizontal {
-  margin-top: 8px;
-}
-
-.mat-mdc-form-field {
-  margin-top: 16px;
-}
 
