--- a/Blog-Hub/src/app/signup/signup.component.html
+++ b/Blog-Hub/src/app/signup/signup.component.html
@@ -1,57 +1,46 @@
+
+
 <div class="logo">
   <img src="./logo.jpg" alt="logo" width="200" height="100">
 
 </div>
 <div class="auth-container">
-  <div class="signup">
-    
-    <h1 style="text-align: center;">Sign Up</h1>
-    <hr>
   
-<mat-stepper [linear]="isLinear" #stepper>
- 
-  <mat-step [stepControl]="firstFormGroup">
-    <form [formGroup]="firstFormGroup">
-      <mat-form-field appearance="fill" class="full-width">
-        <mat-label>Name</mat-label>
-        <input matInput type="text"  formControlName="name" required />
-      </mat-form-field>
-      <mat-form-field appearance="fill" class="full-width">
-        <mat-label>Email</mat-label>
-        <input matInput type="email"  formControlName="email" required />
-      </mat-form-field>
+  <mat-card>
+    <div>
     
-      <mat-form-field appearance="fill" class="full-width">
-        <mat-label>Mobile No</mat-label>
-        <input matInput placeholder="Phone No" formControlName="phone" required>
-      </mat-form-field>
-      <div>
-        <button mat-button matStepperNext>Next</button>
-      </div>
-    </form>
-  </mat-step>
-  <mat-step [stepControl]="secondFormGroup" >
-    <form [formGroup]="secondFormGroup" (ngSubmit)="onSubmit()" >
-     
+      <h1 style="text-align: center;">Sign Up</h1>
+      <hr>
+    </div>
+    <mat-card-content>
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+        <mat-form-field appearance="fill" class="full-width">
+          <mat-label>Name</mat-label>
+          <input matInput type="text"  formControlName="name" required />
+        </mat-form-field>
+        <mat-form-field appearance="fill" class="full-width">
+          <mat-label>Email</mat-label>
+          <input matInput type="email"  formControlName="email" required />
+        </mat-form-field>
       
-      <mat-form-field appearance="fill" class="full-width">
-        <mat-label>Password</mat-label>
-        <input matInput type="password"  formControlName="password" required />
-      </mat-form-field>
-      <mat-form-field appearance="fill" class="full-width">
-        <mat-label>Confirm Password</mat-label>
-        <input matInput type="password"  formControlName="cnfpassword" required />
-      </mat-form-field>
-      <div>
-        <button mat-button matStepperPrevious>Back</button>
+        <mat-form-field appearance="fill" class="full-width">
+          <mat-label>Mobile No</mat-label>
+          <input matInput placeholder="Phone No" formControlName="phone" required>
+        </mat-form-field>
+        <mat-form-field appearance="fill" class="full-width">
+          <mat-label>Password</mat-label>
+          <input matInput type="password"  formControlName="password" required />
+        </mat-form-field>
+        <mat-form-field appearance="fill" class="full-width">
+          <mat-label>Confirm Password</mat-label>
+          <input matInput type="password"  formControlName="cnfpassword" required />
+        </mat-form-field>
+        <div class="auth-actions">
+          <button mat-raised-button color="primary" type="submit">Sign Up</button>
+        </div>
+  
+      </form>
+    </mat-card-content>
+  </mat-card>
 
-      </div>
-
-      <div class="auth-actions">
-        <button mat-raised-button color="primary" type="submit">Sign Up</button>
-      </div>
-    </form>
-  </mat-step>
-</mat-stepper>
-</div>
 </div>
