--- a/Blog-Hub/src/app/postblog/postblog.component.css
+++ b/Blog-Hub/src/app/postblog/postblog.component.css
@@ -1,19 +1,51 @@
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
-  
-  td {
-    padding-right: 8px;
-  }
 
-  .logo{
-    height:80px;
-    /* border: 2px solid black; */
-    overflow: hidden;
-   }
+.auth-container {
+  display: flex;
+  justify-content:flex-start;
+  /* align-items: center; */
+  height: 80vh;
+  margin-left: 50px;
+  /* background-color: #f5f5f5; */
+}
+
+mat-card {
+  width: 100%;
+  /* height: 500px; */
+  max-width: 600px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.auth-title {
+  text-align: center!important;
+  font-size: 40px;
+  color: #3f51b5;
+  text-align: center;
+
+}
+
+.full-width {
+  width: 100%;
+}
+
+.auth-actions {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.auth-actions a {
+  text-decoration: none;
+  color: #3f51b5;
+}
+
+.auth-actions button {
+  width: 100%;
+}
+.logo{
+ height:80px;
+ overflow: hidden;
+}
+
+
