--- a/Blog-Hub/src/app/postblog/postblog.component.html
+++ b/Blog-Hub/src/app/postblog/postblog.component.html
@@ -1,26 +1,44 @@
 <div class="logo">
-    <img src="./logo.jpg" alt="logo" width="200" height="100">
-  
-  </div>
-<form class="example-form">
-   
-    <table class="example-full-width" cellspacing="0"><tr>
-      <td><mat-form-field class="example-full-width">
-        <mat-label>Blog title</mat-label>
-        <input matInput>
-      </mat-form-field></td>
-      <td><mat-form-field class="example-full-width">
-        <mat-label></mat-label>
-        <input matInput>
-      </mat-form-field></td>
-    </tr></table>
-  
-    <p>
-      <mat-form-field class="example-full-width">
-        <mat-label>Blog body</mat-label>
-        <textarea matInput placeholder=" "> </textarea>
-      </mat-form-field>
-    </p>
-  
-  </form>
-  
+  <img src="./logo.jpg" alt="logo" width="200" height="100">
+
+</div>
+<div class="auth-container">
+
+  <mat-card>
+
+    <mat-card-content>
+      <form [formGroup]="blog" (ngSubmit)="onSubmit()">
+        <h4>Blog Title</h4>
+        <mat-form-field appearance="fill" class="full-width">
+
+          <input matInput type="text" formControlName="title" placeholder="Title"required />
+        </mat-form-field>
+
+        <h4>Blog Category</h4>
+        <mat-form-field appearance="fill" class="full-width">
+
+          <mat-select  formControlName="category" placeholder="Select">
+            @for (category of ctgry; track category) {
+            <mat-option [value]="category.value">{{category.value}}</mat-option>
+            }
+          </mat-select>
+        </mat-form-field>
+        <h4>Blog body</h4>
+        <mat-form-field appearance="fill" class="full-width">
+
+          <textarea type="text" matInput formControlName="blogbody" rows="3" placeholder="write content"></textarea>
+        </mat-form-field>
+        <h4>Blog Image</h4>
+         <input  type="file" formControlName="image" required />
+        
+
+
+        <div class="auth-actions">
+          <button mat-raised-button color="primary" type="submit">Post Blog</button>
+        </div>
+
+      </form>
+    </mat-card-content>
+  </mat-card>
+
+</div>
